--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
 <script>
     // --- CONFIGURACIÓN ---
-    const PASSWORD_ADMIN = "1234"; // <--- CAMBIA ESTA CONTRASEÑA AQUÍ
+    const PASSWORD_ADMIN = "BIENESTAR2026"; // <--- CAMBIA ESTA CONTRASEÑA AQUÍ
     let registros = JSON.parse(localStorage.getItem('docRecords_v3')) || [];
     let currentUserRole = null; // 'admin' o 'guest'
 
