--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
 <div id="loginScreen">
     <div class="login-box">
-        <h2>Control Documental</h2>
+        <h2>Control Documental IMMS-BIENESTAR 2026</h2>
         <p>Seleccione su tipo de acceso</p>
         
         <input type="password" id="adminPassInput" class="login-input" placeholder="Contraseña de Administrador">
